# quadris

./: Makefile  cabal.project  flake.nix  hello-hs.cabal  quadris.cabal  wasm-browser-mode-assets.patch
app/: Main.hs  Quadris.hs  Util.hs
app/Quadris/: Css.hs  Miso.hs
app/Util/: FixedLengthQueue.hs  MisoAesonDeriving.hs  MisoOptics.hs  Shuffle.hs  Util.hs
server/: Main.hs
static/: index.html  index.js  style.css
