cabal-version: 3.0
name: hello-hs
version: 0.1.0.0
license-file: LICENSE
author: George Thomas
maintainer: georgefsthomas@gmail.com

executable hello-hs
    main-is: Main.hs
    hs-source-dirs: app
    default-language: GHC2024
    default-extensions:
        BlockArguments
        DerivingStrategies
        DerivingVia
        DuplicateRecordFields
        LexicalNegation
        MultilineStrings
        NamedFieldPuns
        NegativeLiterals
        NoFieldSelectors
        NoMonomorphismRestriction
        OrPatterns
        OverloadedLabels
        OverloadedRecordDot
        PartialTypeSignatures
        RecordWildCards
        ViewPatterns
    ghc-options:
        -Wall
    build-depends:
        base >=4.14,
        miso,
    if arch(wasm32)
        ghc-options:
            -no-hs-main -optl-mexec-model=reactor
    else
        ghc-options:
            -threaded
