cabal-version: 3.0
name: quadris
version: 0.1.0.0
license-file: LICENSE
author: George Thomas
maintainer: georgefsthomas@gmail.com

common common
    default-language: GHC2024
    default-extensions:
        BlockArguments
        DerivingStrategies
        DerivingVia
        DuplicateRecordFields
        LexicalNegation
        MultilineStrings
        NamedFieldPuns
        NegativeLiterals
        NoFieldSelectors
        NoMonomorphismRestriction
        OrPatterns
        OverloadedLabels
        OverloadedRecordDot
        OverloadedStrings
        PartialTypeSignatures
        RecordWildCards
        ViewPatterns
    ghc-options:
        -Wall
        -Wmissing-deriving-strategies
    build-depends:
        base >=4.14,
        aeson,
        colour,
        containers,
        extra,
        foreign-store,
        generic-optics,
        linear,
        massiv,
        miso-aeson,
        miso-optics,
        miso,
        mtl,
        optics-operators,
        optics,
        pretty-simple,
        random,
        safe,
        text,
        time,
        unordered-containers,

executable quadris
    import: common
    main-is: Main.hs
    hs-source-dirs: app
    other-modules:
        Quadris
        Quadris.Miso
        Util
        Util.FixedLengthQueue
        Util.Shuffle
    if os(wasi)
        ghc-options:
            -no-hs-main -optl-mexec-model=reactor

executable quadris-server
    import: common
    main-is: Main.hs
    hs-source-dirs: server
    if os(wasi)
        buildable: False
    else
        build-depends:
            bytestring,
            http-media,
            mcp-types,
            mcp,
            servant-auth-server,
            servant-server,
            servant,
            transformers,
            wai,
            wai-app-static,
            warp,
            websockets,
