cabal-version: 3.0
name: quadris
version: 0.1.0.0
license-file: LICENSE
author: George Thomas
maintainer: georgefsthomas@gmail.com
extra-source-files:
    static/style.css

executable quadris
    main-is: Main.hs
    hs-source-dirs: app
    other-modules:
        Quadris
        Quadris.Miso
        Quadris.Css
        Util
        Util.FixedLengthQueue
        Util.Shuffle
    default-language: GHC2024
    default-extensions:
        BlockArguments
        DerivingStrategies
        DerivingVia
        DuplicateRecordFields
        LexicalNegation
        MultilineStrings
        NamedFieldPuns
        NegativeLiterals
        NoFieldSelectors
        NoMonomorphismRestriction
        OrPatterns
        OverloadedLabels
        OverloadedRecordDot
        OverloadedStrings
        PartialTypeSignatures
        RecordWildCards
        ViewPatterns
    ghc-options:
        -Wall
        -Wmissing-deriving-strategies
    build-depends:
        base >= 4.14,
        aeson,
        colour,
        containers,
        css-class-bindings,
        directory,
        extra,
        filepath,
        foreign-store,
        generic-optics,
        linear,
        massiv,
        miso-aeson,
        miso-optics,
        miso,
        mtl,
        optics-operators,
        optics,
        pretty-simple,
        random,
        safe,
        template-haskell,
        text,
        time,
        unordered-containers,
    if os(wasi)
        ghc-options:
            -no-hs-main -optl-mexec-model=reactor
    else
        ghc-options:
            -threaded
